--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
+    "format": "prettier --write './**/*.{ts,tsx,js,jsx}' --config ./.prettierrc",
+    "precommit": "yarn format && yarn lint && git add .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "18.0.0",
@@ -16,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@commitlint/config-conventional": "^17.0.3",
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
@@ -24,9 +28,12 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
+    "commitlint": "^17.0.3",
     "eslint": "^7.32.0",
+    "husky": "^8.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
+    "prettier": "^2.7.1",
     "react-test-renderer": "18.0.0",
     "typescript": "^4.4.4"
   },
