chore: app rename

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "RNWunderBoilerPlate",
-  "displayName": "RNWunderBoilerPlate"
+  "name": "WBoilerplate",
+  "displayName": "WBoilerplate"
 }
