--- a/ios/WBoilerplate.xcodeproj/xcshareddata/xcschemes/WBoilerplate.xcscheme
+++ b/ios/WBoilerplate.xcodeproj/xcshareddata/xcschemes/WBoilerplate.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "RNWunderBoilerPlate.app"
-               BlueprintName = "RNWunderBoilerPlate"
-               ReferencedContainer = "container:RNWunderBoilerPlate.xcodeproj">
+               BuildableName = "WBoilerplate.app"
+               BlueprintName = "WBoilerplate"
+               ReferencedContainer = "container:WBoilerplate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "RNWunderBoilerPlateTests.xctest"
-               BlueprintName = "RNWunderBoilerPlateTests"
-               ReferencedContainer = "container:RNWunderBoilerPlate.xcodeproj">
+               BuildableName = "WBoilerplateTests.xctest"
+               BlueprintName = "WBoilerplateTests"
+               ReferencedContainer = "container:WBoilerplate.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RNWunderBoilerPlate.app"
-            BlueprintName = "RNWunderBoilerPlate"
-            ReferencedContainer = "container:RNWunderBoilerPlate.xcodeproj">
+            BuildableName = "WBoilerplate.app"
+            BlueprintName = "WBoilerplate"
+            ReferencedContainer = "container:WBoilerplate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RNWunderBoilerPlate.app"
-            BlueprintName = "RNWunderBoilerPlate"
-            ReferencedContainer = "container:RNWunderBoilerPlate.xcodeproj">
+            BuildableName = "WBoilerplate.app"
+            BlueprintName = "WBoilerplate"
+            ReferencedContainer = "container:WBoilerplate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
