chore: changelog parser added

--- a/.versionrc
+++ b/.versionrc
@@ -40,5 +40,8 @@
   "userUrlFormat": "{{host}}/{{user}}",
   "issuePrefixes": [
     "#"
-  ]
+  ],
+  "scripts": {
+    "postchangelog": "node scripts/parseChangeLog.js"
+  }
 }
