--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
+    "changelog-parser": "^2.8.1",
     "commitlint": "^17.0.3",
     "eslint": "^7.32.0",
     "husky": "^8.0.0",
