ci: ruby version install added

--- a/.github/workflows/sender.yml
+++ b/.github/workflows/sender.yml
@@ -7,15 +7,11 @@ jobs:
   init-repo:
     name: Init Repo
     uses: ./.github/workflows/install-dependencies.yml
-  build-ios:
+  build-binaries:
     name: Buid iOS Binary
-    uses: ./.github/workflows/build-ios.yml
+    uses: ./.github/workflows/build-binaries.yml
     needs: [init-repo]
-  build-android:
-    name: Buid Android Binary
-    uses: ./.github/workflows/build-android.yml
-    needs: [init-repo, build-ios]
   slack-notification:
     name: Send Slack Notification
     uses: ./.github/workflows/notify.yml
-    needs: [init-repo, build-ios, build-android]
+    needs: [init-repo, build-binaries]
