--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -10,6 +10,18 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      
+      - name: export LC_ALL
+        run: export LC_ALL=en_US.UTF-8
+
+      - name: export LANG
+        run: export LANG=en_US.UTF-8
+
+      - name: export LC_ALL
+        run: export LC_ALL=en_US.UTF-8
+
+      - name: export LANG
+        run: export LANG=en_US.UTF-8
 
   setup-node-env:
     name: Setup Node Env
@@ -24,6 +36,17 @@ jobs:
 
     needs: [checkout-to-branch]
 
+  setup-ruby-env:
+    name: Setup Ruby Env
+    runs-on: self-hosted
+    steps:
+      - name: Setup Ruby environment
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 3.0.0
+
+    needs: [checkout-to-branch, setup-node-env]
+
   install-npm-packages:
     name: Install Packages
     runs-on: self-hosted
@@ -31,7 +54,7 @@ jobs:
       - name: yarn
         run: yarn
 
-    needs: [checkout-to-branch, setup-node-env]
+    needs: [checkout-to-branch, setup-node-env, setup-ruby-env]
 
   install-ruby-packages:
     name: Install Ruby Packages
@@ -40,4 +63,4 @@ jobs:
       - name: bundle install
         run: bundle install
     
-    needs: [checkout-to-branch, setup-node-env, install-npm-packages]
+    needs: [checkout-to-branch, setup-node-env, setup-ruby-env, install-npm-packages]
