--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -41,9 +41,10 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Setup Ruby environment
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.0.0
+          ruby-version: '3.0.0'
+          bundler-cache: true
 
     needs: [checkout-to-branch, setup-node-env]
 
