--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -39,12 +39,16 @@ jobs:
   setup-ruby-env:
     name: Setup Ruby Env
     runs-on: self-hosted
+
     steps:
+      - name: export ImageOS
+        run: export ImageOS=macos1015
+
       - name: Setup Ruby environment
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0.0'
           bundler-cache: true
+
 
     needs: [checkout-to-branch, setup-node-env]
 
