ci: bundle install disabled

--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -45,13 +45,13 @@ jobs:
 
     needs: [checkout-to-branch, setup-node-env]
 
-  install-ruby-packages:
-    name: Install Ruby Packages
-    runs-on: self-hosted
-    steps:
-      - name: bundle install
-        run: rvm use ruby-3.0.0
-      - name: bundle install
-        run: bundle install
+  # install-ruby-packages:
+  #   name: Install Ruby Packages
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: bundle install
+  #       run: rvm use ruby-3.0.0
+  #     - name: bundle install
+  #       run: bundle install
     
-    needs: [checkout-to-branch, setup-node-env, install-npm-packages]
+  #   needs: [checkout-to-branch, setup-node-env, install-npm-packages]
