ci: bundle install reanabled

--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -34,8 +34,6 @@ jobs:
           check-latest: true
           registry-url: https://npm.pkg.github.com/
 
-    needs: [checkout-to-branch]
-
   install-npm-packages:
     name: Install Packages
     runs-on: self-hosted
@@ -43,15 +41,11 @@ jobs:
       - name: yarn
         run: yarn
 
-    needs: [checkout-to-branch, setup-node-env]
-
-  # install-ruby-packages:
-  #   name: Install Ruby Packages
-  #   runs-on: self-hosted
-  #   steps:
-  #     - name: bundle install
-  #       run: rvm use ruby-3.0.0
-  #     - name: bundle install
-  #       run: bundle install
-    
-  #   needs: [checkout-to-branch, setup-node-env, install-npm-packages]
+  install-ruby-packages:
+    name: Install Ruby Packages
+    runs-on: self-hosted
+    steps:
+      - name: bundle install
+        run: rvm use ruby-3.0.0
+      - name: bundle install
+        run: bundle install
