--- a/.github/workflows/sender.yml
+++ b/.github/workflows/sender.yml
@@ -4,14 +4,16 @@ on:
     branches: [test-release]
 
 jobs:
-  init-repo:
+  initRepo:
+    runs-on: self-hosted
     name: Init Repo
-    uses: ./.github/workflows/install-dependencies.yml
-  build-binaries:
-    name: Buid iOS Binary
-    uses: ./.github/workflows/build-binaries.yml
-    needs: [init-repo]
-  slack-notification:
-    name: Send Slack Notification
-    uses: ./.github/workflows/notify.yml
-    needs: [init-repo, build-binaries]
+    steps:
+      - uses: ./.github/workflows/install-dependencies.yml
+  # build-binaries:
+  #   name: Buid iOS Binary
+  #   uses: ./.github/workflows/build-binaries.yml
+  #   needs: [init-repo]
+  # slack-notification:
+  #   name: Send Slack Notification
+  #   uses: ./.github/workflows/notify.yml
+  #   needs: [init-repo, build-binaries]
