--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -7,11 +7,11 @@ jobs:
   init-repo:
     name: Init Repo
     uses: ./.github/workflows/install-dependencies.yml
-  # build-binaries:
-  #   name: Buid iOS Binary
-  #   uses: ./.github/workflows/build-binaries.yml
-  #   needs: [init-repo]
-  # slack-notification:
-  #   name: Send Slack Notification
-  #   uses: ./.github/workflows/notify.yml
-  #   needs: [init-repo, build-binaries]
+  build-binaries:
+    name: Buid iOS Binary
+    uses: ./.github/workflows/build-binaries.yml
+    needs: [init-repo]
+  slack-notification:
+    name: Send Slack Notification
+    uses: ./.github/workflows/notify.yml
+    needs: [init-repo, build-binaries]
