--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,12 +1,12 @@
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative "../node_modules/react-native/scripts/react_native_pods"
+require_relative "../node_modules/@react-native-community/cli-platform-ios/native_modules"
 
-platform :ios, '12.4'
-install! 'cocoapods', :deterministic_uuids => false
+platform :ios, "12.4"
+install! "cocoapods", :deterministic_uuids => false
 
 production = ENV["PRODUCTION"] == "1"
 
-target 'WBoilerplate' do
+target "WBoilerplate" do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -20,16 +20,25 @@ target 'WBoilerplate' do
     :fabric_enabled => flags[:fabric_enabled],
     :flipper_configuration => FlipperConfiguration.enabled,
     # An absolute path to your application root.
-    :app_path => "#{Pod::Config.instance.installation_root}/.."
+    :app_path => "#{Pod::Config.instance.installation_root}/..",
   )
 
-  target 'WBoilerplateTests' do
+  target "WBoilerplateTests" do
     inherit! :complete
     # Pods for testing
   end
 
   post_install do |installer|
     react_native_post_install(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        # Using the un-qualified names means you can swap in different implementations, for example ccache
+        config.build_settings["CC"] = "clang"
+        config.build_settings["LD"] = "clang"
+        config.build_settings["CXX"] = "clang++"
+        config.build_settings["LDPLUSPLUS"] = "clang++"
+      end
+    end
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
