ci: actions improvements

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -10,11 +10,19 @@ jobs:
       # - run: |
       #     echo "Sleeping for 10"
       #     sleep 10
-      - name: Cache iOS Derived Data
-        uses: actions/cache@master
+      - name: Restore Pods cache
+        uses: actions/cache@v2
         with:
-          path: ./ios/DerivedData/
-          key: ${{ runner.os }}-pods-derived-data-${{ hashFiles('**/Podfile.lock') }}
+          path: |
+            example/ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+      
+      - name: Install Pods
+        run: cd ios && pod install && cd ..
 
       - name: Buid iOS Binary
         run: fastlane ios beta
@@ -26,18 +34,15 @@ jobs:
       # - run: |
       #     echo "Sleeping for 10"
       #     sleep 10
-      - name: Cache Gradle Wrapper
-        uses: actions/cache@master
+      - name: Restore Gradle cache
+        uses: actions/cache@v2
         with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
-
-      - name: Cache Gradle Dependencies
-        uses: actions/cache@master
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-caches-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-gradle-caches-
+            ${{ runner.os }}-gradle-
+            
       - name: Buid Android Binary
         run: fastlane android beta
