--- a/.github/workflows/install-dependencies.yml
+++ b/.github/workflows/install-dependencies.yml
@@ -52,6 +52,10 @@ jobs:
         run: yarn install --immutable
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
 
+      - name: Restore buildcache
+        uses: mikehardy/buildcache-action@v1
+        continue-on-error: true
+
   install-ruby-packages:
     name: Install Ruby Packages
     runs-on: self-hosted
@@ -60,6 +64,13 @@ jobs:
       # - run: |
       #     echo "Sleeping for 10"
       #     sleep 10
+      - name: Setup Ruby (bundle)
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0
+          bundler-cache: true
+          working-directory: ios
+        
       - name: Gem caching
         uses: actions/cache@v2
         continue-on-error: true
