--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -6,12 +6,16 @@ on:
 jobs:
   init-repo:
     name: Init Repo
-    uses: ./.github/workflows/install-dependencies.yml
+    uses: ./.github/workflows/reuseables/install-dependencies.yml
   build-binaries:
-    name: Buid iOS Binary
-    uses: ./.github/workflows/build-binaries.yml
+    name: Build Binaries
+    uses: ./.github/workflows/reuseables/build-binaries.yml
     needs: [init-repo]
+  send-binaries:
+    name: Send Binaries
+    uses: ./.github/workflows/reuseables/deliver.yml
+    needs: [init-repo, build-binaries]
   slack-notification:
     name: Send Slack Notification
-    uses: ./.github/workflows/notify.yml
-    needs: [init-repo, build-binaries]
+    uses: ./.github/workflows/reuseables/notify.yml
+    needs: [init-repo, build-binaries, send-binaries]
