--- a/.github/workflows/reuseables/install-dependencies.yml
+++ b/.github/workflows/reuseables/install-dependencies.yml
@@ -37,20 +37,21 @@ jobs:
       # - run: |
       #     echo "Sleeping for 10"
       #     sleep 10
-      - name: Find yarn cache
-        id: yarn-cache-path
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Cache node modules
-        uses: actions/cache@v2
+      - name: Restore node_modules from cache
+        uses: actions/cache@v3
+        id: yarn-cache
         with:
-          path: ${{ steps.yarn-cache-path.outputs.dir }}
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: ${{ runner.os }}-yarn-
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
-      - name: Install node modules if cache not present
-        run: yarn install --immutable
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+      - name: Install node_modules
+        run: yarn install --frozen-lockfile --cwd ..
 
       - name: Restore buildcache
         uses: mikehardy/buildcache-action@v1
@@ -72,7 +73,7 @@ jobs:
           working-directory: ios
         
       - name: Gem caching
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         continue-on-error: true
         with:
           path: vendor/bundle
