--- a/.github/workflows/validate-js.yml
+++ b/.github/workflows/validate-js.yml
@@ -37,7 +37,7 @@ jobs:
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(yarn cache dir)"
     - name: Restore node_modules from cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       id: yarn-cache
       with:
         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -46,9 +46,7 @@ jobs:
           ${{ runner.os }}-yarn-
 
     - name: Install node_modules
-      run: yarn install --frozen-lockfile
-    - name: Install node_modules (example/)
-      run: yarn install --frozen-lockfile --cwd example
+      run: yarn install --frozen-lockfile --cwd ..
 
     - name: Run TypeScript # Reviewdog tsc errorformat: %f:%l:%c - error TS%n: %m
       run: |
@@ -56,9 +54,9 @@ jobs:
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Run TypeScript in example/ # Reviewdog tsc errorformat: %f:%l:%c - error TS%n: %m
+    - name: Run TypeScript in project root # Reviewdog tsc errorformat: %f:%l:%c - error TS%n: %m
       run: |
-        cd example && yarn typescript | reviewdog -name="tsc" -efm="%f(%l,%c): error TS%n: %m" -reporter="github-pr-review" -filter-mode="nofilter" -fail-on-error -tee && cd ..
+        yarn typescript | reviewdog -name="tsc" -efm="%f(%l,%c): error TS%n: %m" -reporter="github-pr-review" -filter-mode="nofilter" -fail-on-error -tee && cd ..
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -72,7 +70,7 @@ jobs:
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(yarn cache dir)"
     - name: Restore node_modules from cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       id: yarn-cache
       with:
         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -81,9 +79,7 @@ jobs:
           ${{ runner.os }}-yarn-
 
     - name: Install node_modules
-      run: yarn install --frozen-lockfile
-    - name: Install node_modules (example/)
-      run: yarn install --frozen-lockfile --cwd example
+      run: yarn install --frozen-lockfile --cwd ..
 
     - name: Run ESLint
       run: yarn lint -f @jamesacarr/github-actions
@@ -91,11 +87,11 @@ jobs:
     - name: Run ESLint with auto-fix
       run: yarn lint --fix
 
-    - name: Run ESLint in example/
-      run: cd example && yarn lint -f @jamesacarr/github-actions && cd ..
+    - name: Run ESLint in project root
+      run: yarn lint -f @jamesacarr/github-actions && cd ..
 
-    - name: Run ESLint in example/ with auto-fix
-      run: cd example && yarn lint --fix && cd ..
+    - name: Run ESLint in project root with auto-fix
+      run: yarn lint --fix && cd ..
 
     - name: Verify no files have changed after auto-fix
       run: git diff --exit-code HEAD
