--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -66,7 +66,7 @@ jobs:
             ${{ runner.os }}-pods-
 
       - name: Install Pods
-        run: bundle exec pod check || bundle exec pod install
+        run: pod check ||pod install
 
       - name: Install xcpretty
         run: gem install xcpretty
