--- a/.github/workflows/validate-js.yml
+++ b/.github/workflows/validate-js.yml
@@ -14,7 +14,6 @@ on:
   pull_request:
     branches:
       - test-release
-      - master
     paths:
       - '.github/workflows/validate-js.yml'
       - 'src/**'
@@ -82,16 +81,7 @@ jobs:
       run: yarn install --frozen-lockfile --cwd ..
 
     - name: Run ESLint
-      run: yarn lint -f @jamesacarr/github-actions
-
-    - name: Run ESLint with auto-fix
-      run: yarn lint --fix
-
-    - name: Run ESLint in project root
-      run: yarn lint -f @jamesacarr/github-actions && cd ..
-
-    - name: Run ESLint in project root with auto-fix
-      run: yarn lint --fix && cd ..
+      run: yarn lint && yarn prettier
 
     - name: Verify no files have changed after auto-fix
       run: git diff --exit-code HEAD
