--- a/.github/workflows/notice-yarn-changes.yml
+++ b/.github/workflows/notice-yarn-changes.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v2
