--- a/.github/workflows/validate-js.yml
+++ b/.github/workflows/validate-js.yml
@@ -81,7 +81,7 @@ jobs:
       run: yarn install --frozen-lockfile --cwd ..
 
     - name: Run ESLint
-      run: yarn lint && yarn prettier
+      run: yarn lint && yarn format
 
     - name: Verify no files have changed after auto-fix
       run: git diff --exit-code HEAD
