fix: android build folder gitignore

--- a/.github/workflows/sender.yml
+++ b/.github/workflows/sender.yml
@@ -8,7 +8,7 @@ jobs:
     name: Init Repo
     uses: ./.github/workflows/install-dependencies.yml
   build-binaries:
-    name: Buid Binaries
+    name: Build Binaries
     uses: ./.github/workflows/build-binaries.yml
     needs: [init-repo]
   send-binaries:
