--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Xcode
 #
-build/
+ios/build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -25,7 +25,7 @@ ios/.xcode.env.local
 
 # Android/IntelliJ
 #
-build/
+android/app/build/
 .idea
 .gradle
 local.properties
