ci: eslint test

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.3",
   "private": true,
   "scripts": {
-    "typescript": "tsc --noEmit",
+    "typescript": "tsc",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
+    "lint": "eslint '*/**/*.{ts,tsx}' --fix -f rdjson .",
     "format": "prettier --write './**/*.{ts,tsx,js,jsx}' --config ./.prettierrc",
-    "precommit": "yarn format && yarn lint && git add .",
+    "precommit": "yarn format && git add .",
     "prepare": "husky install",
     "release": "standard-version",
     "postinstall": "patch-package",
@@ -36,6 +36,9 @@
     "changelog-parser": "^2.8.1",
     "commitlint": "^17.0.3",
     "eslint": "^7.32.0",
+    "eslint-config-react-native-wcandillon": "^3.8.0",
+    "eslint-formatter-rdjson": "^1.0.5",
+    "eslint-plugin-reanimated": "^1.2.7",
     "husky": "^8.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
