--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint '*/**/*.{ts,tsx}' --fix -f rdjson .",
+    "lint": "eslint '*/**/*.{ts,tsx}' --fix",
     "format": "prettier --write './**/*.{ts,tsx,js,jsx}' --config ./.prettierrc",
     "precommit": "yarn format && git add .",
     "prepare": "husky install",
