--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "changelog-parser": "^2.8.1",
     "commitlint": "^17.0.3",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-native-wcandillon": "^3.8.0",
     "eslint-formatter-rdjson": "^1.0.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-reanimated": "^1.2.7",
     "husky": "^8.0.0",
     "jest": "^26.6.3",
