--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,8 +1,8 @@
 name: Build
 on:
-  push:
+  pull_request:
     branches:
-      - develop # or the name of your main branch
+      - test-release
 jobs:
   build:
     name: Build
