ci: sonar exlusions added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,3 @@
 sonar.projectKey=thisiswunder_wunder-boilerplate
+sonar.sources=.
+sonar.exclusions=.github/**, .husky/**, android/**, certs/**, e2e/**, fastlane/**, ios/**, scripts/**, patches/**
