--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16.15.1
           check-latest: true
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.com/
           scope: '@thisiswunder'
         env:
           NODE_AUTH_TOKEN: ${{secrets.TOKEN}}
