--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,4 +25,4 @@ jobs:
       - run: git config user.name "${{secrets.GIT_CONFIG_DEV_NAME}}"
       - run: yarn
       - run: yarn release-it
-      - run: npm publish
+      - run: npm publish --access public
