--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "@thisiswunder/wunder-boilerplate",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "main": "node_modules/expo/AppEntry.js",
   "license": "MIT",
   "publishConfig": {
     "registry": "https://registry.npmjs.com/"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thisiswunder/wunder-boilerplate.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/thisiswunder/wunder-boilerplate/issues"
+  },
+  "homepage": "https://github.com/thisiswunder/wunder-boilerplate#readme",
+  "description": "",
   "scripts": {
     "lint": "eslint '*/**/*.{ts,tsx}' --fix",
     "format": "prettier --write './**/*.{ts,tsx}' --config ./.prettierrc",
