--- a/package.json
+++ b/package.json
@@ -17,20 +17,36 @@
   "homepage": "https://github.com/thisiswunder/wunder-boilerplate#readme",
   "description": "",
   "scripts": {
+    "start": "npx expo start",
+    "start:dc": "npx expo start --dev-client",
+    "start:prod": "npx expo start --no-dev --minify",
+    "start:android": "npx expo start --android",
+    "start:ios": "npx expo start --ios",
+    "prebuild": "npx expo prebuild",
+    "run:android": "npx expo run:android",
+    "run:android:release": "npx expo run:android --variant release",
+    "run:ios": "npx expo run:ios",
+    "run:ios:release": "npx expo run:ios --configuration Release",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "pub:app:prod": "eas update --branch production",
+    "pub:app:dev": "eas update --branch development",
+    "pub:config": "eas update:configure",
+    "pub:all": "yarn pub:app:dev",
     "lint": "eslint '*/**/*.{ts,tsx}' --fix",
     "format": "prettier --write './**/*.{ts,tsx}' --config ./.prettierrc",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
     "prepare": "husky install",
     "precommit": "yarn format && yarn lint && git add ."
   },
   "dependencies": {
+    "@kanzitelli/if-component": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@release-it/conventional-changelog": "^7.0.0",
+    "@shopify/flash-list": "1.4.3",
     "@tamagui/babel-plugin": "^1.39.3",
     "@tamagui/config": "^1.39.3",
     "@tamagui/shorthands": "^1.39.3",
@@ -38,24 +54,36 @@
     "@types/react": "~18.2.14",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.0",
+    "expo-dev-client": "~2.4.5",
     "expo-font": "~11.4.0",
+    "expo-image": "~1.3.1",
+    "expo-linking": "~5.0.2",
+    "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-updates": "~0.18.9",
+    "formik": "^2.4.2",
+    "i18n-js": "^4.3.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-mmkv": "^2.10.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "release-it": "^16.1.0",
     "tamagui": "^1.39.3",
     "typescript": "^5.1.3",
+    "yup": "^1.2.0",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
+    "dotenv-cli": "^7.2.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-universe": "^11.3.0",
