feat: generators and eslint rules added

--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "pub:app:dev": "eas update --branch development",
     "pub:config": "eas update:configure",
     "pub:all": "yarn pub:app:dev",
-    "lint": "eslint '*/**/*.{ts,tsx}' --fix",
+    "lint": "eslint --fix --ext .ts,.tsx ./",
     "format": "prettier --write './**/*.{ts,tsx}' --config ./.prettierrc",
     "prepare": "husky install",
-    "precommit": "yarn format && yarn lint && git add ."
+    "precommit": "yarn format && yarn lint && git add .",
+    "create:component": "npx generate-react-cli component $NAME --type=component",
+    "create:page": "npx generate-react-cli component $NAME --type=page",
+    "create:store": "npx generate-react-cli component $NAME --type=store"
   },
   "dependencies": {
     "@kanzitelli/if-component": "^0.3.0",
@@ -54,20 +57,20 @@
     "@types/react": "~18.2.14",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.0",
-    "expo-dev-client": "~2.4.5",
+    "expo-dev-client": "~2.4.6",
     "expo-font": "~11.4.0",
-    "expo-image": "~1.3.1",
+    "expo-image": "~1.3.2",
     "expo-linking": "~5.0.2",
     "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
-    "expo-updates": "~0.18.9",
+    "expo-updates": "~0.18.10",
     "formik": "^2.4.2",
     "i18n-js": "^4.3.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.72.1",
+    "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-mmkv": "^2.10.1",
     "react-native-reanimated": "~3.3.0",
@@ -83,11 +86,15 @@
     "@babel/core": "^7.20.0",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
+    "@react-native/eslint-plugin": "^0.73.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-universe": "^11.3.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0-alpha.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.0",
     "prettier": "^3.0.0"
   },
